--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -15,3 +15,8 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v1beta1
+      kind: HelmRelease
+      name: kube-prometheus
+      namespace: monitoring
