--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
   - sources
   - cert-manager
-  - monitoring
+  - monitoring/kustomization-stack.yaml
+  - monitoring/kustomization-config.yaml
