--- a/infrastructure/monitoring/kustomization-stack.yaml
+++ b/infrastructure/monitoring/kustomization-stack.yaml
@@ -1,13 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: flux-monitoring
+  name: monitoring-stack
+  namespace: flux-system
 spec:
-  interval: 1h0m0s
-  path: ./manifests/monitoring/monitoring-config
+  interval: 10m0s
+  path: ./infrastructure/monitoring/stack
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux
-    namespace: flux-system
-
+    name: flux-system
