--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: infrastructure
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 4m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -20,3 +20,7 @@ spec:
       kind: HelmRelease
       name: kube-prometheus
       namespace: monitoring
+    - apiVersion: helm.toolkit.fluxcd.io/v1beta1
+      kind: HelmRelease
+      name: cert-manager
+      namespace: cert-manager
