--- a/infrastructure/secrets/github.yaml
+++ b/infrastructure/secrets/github.yaml
@@ -1,36 +1,36 @@
 apiVersion: v1
+data:
+    token: ENC[AES256_GCM,data:n1mpeJpfcnGHI+/7jQfv/z5+AKknj/mldEoNWRmrAUkfYwXOOSluPGyueNDAJjJ6q549oHEvEfk=,iv:zhcNYGJJvJrIwEEKKaIq+Tc7nQIlMmERtrPAZ36sXKo=,tag:AAQSptktStTVaKb86FbA4A==,type:str]
 kind: Secret
 metadata:
     name: github
-data:
-    token: ENC[AES256_GCM,data:+ptbFo3BaK1fA04W7Ye/+2DOL5l9qH1zA2zePhZyNzYe/ISSqVAzu/ueQLWg9VHgqop8xg==,iv:Fr1zV3VSWehw0nYWxj+pJA3gp1Uv8lu38QPb6v8dXkI=,tag:MpkreCFcTVhJJtzK1KSykg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-28T09:56:09Z"
-    mac: ENC[AES256_GCM,data:X/F/DjkTo7prVbrENjzLRe2ivRoT9k0WXXv/Dzaqkyjr8SO2ZGRUSZK1iQdABOitGavWxKRHkh687fM4uEYLOP186xnii5Gyri7ULXlyse+/EavWttbrS5kyMKZHnR0Uuy3zXTVERVOC+BbQxe6HxrbKTsQ19+0+uKGT2L/Q/10=,iv:KDz7I8yerHfp32svCyAFDeflsl05vf//QsEkCNQRx+o=,tag:sVAQftlX1Ro6fa1mXtv6WQ==,type:str]
+    lastmodified: "2021-06-28T12:00:58Z"
+    mac: ENC[AES256_GCM,data:JYIKsgmbObvA3wlWO8TpmvycFBU53oECm9DqkZB5eCcjhXla6U552RzsrxGRQR0lOWI22Vy2XjDeWjbDSG+AGonLgq5dISM22dWCtLZlG8C9C1lgJf2Ieyn/8MgBhRd+EeMIa6HsUh2dpQY5vOmqRmWXqCc3OFzSWqQuAvFsgQI=,iv:XKJnqbVUWR4e4aVvDc4uCshLg5gSP+hKbEd0S8qFoyU=,tag:246qNEJqsJT5xsZuTbAL8w==,type:str]
     pgp:
-        - created_at: "2021-06-28T09:56:08Z"
+        - created_at: "2021-06-28T12:00:58Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA3EM9k0/DEgRARAAhzlk/UBzt9yK/TYlq2y3mR9j3MjjQOdx9ZszdLu4tp1h
-            fZVzErxTsorq2Pn+fsObR6rhqaCLpficq2EkY5bB2BnbbuKj64DPeNPrNFs8yYoI
-            y9eCJuDYPgEj+9AJB694yjZgUJSGcqjqvderE7tnVWuJPFzuzOlS9bZuKPfKTAeF
-            WOSoMgK1BaIqgTzDQM4x+2ISzErzw/S0PKCoPMBQPFylg2Ei1uVAgtzMaFp/eK72
-            xc0ruK6m3Bqv07Iv1fw4UJLIV+VE47qbk3/GFSCGJ89CYXO9G4tnKQvuwo6EcnDK
-            0KA/L6sn0KkdbTBAr0aZuI8MDtgAbmbaNF7fukhEuC+uWbt95c4F+xt68u3j56g1
-            i+pnW2pk5lnsOabpIwq5VTyLJO1iKTCrJMjb36xlGHvovTnD+pc6/UabzSxAy278
-            D+9cjpNlx6dTyZm3cxVLTDpNyoMJ68Ce0l5J5CU3a0F553wU+mdSZ9W7Jy4Us3fy
-            cCC6EYXybyXdzEcaC4IJwm/z9L3lIrbKlVEjnAvsyhO1+Pq+EskQsFamaOAjAI+q
-            N7TyVBSgEmcPB7kZYiASmWIkqnBN92w8mmszAc4wgy6f7e/kTls61JhezPmCNFeh
-            nffRP7ro5Vg11ubpU7914d3tFAWP3g+IF4NaZy8WVni68SJq4tCal+PWCqV3YTDS
-            XgHmXQkYD9gJMFOMuDU5Rc53HFzuu0Tz3CBbIFL5rRr7pFHoj6PtRjCCocY6Z5NS
-            nZ6wzQsaw7h4gMKl0I1mJtAGF+C3CQG54c5MUYUZKlx397LAwFwKuj5IV6OSjus=
-            =93x+
+            hQIMA3EM9k0/DEgRAQ/+OD9stwx5eLwxDnCcvY9P/Vc1F68MKsH82o6+jYbe8SQo
+            r5pBM2KQgjGQJ1JZliKRdb1evGneWbP6LD7VbHGi+27ah/5JUlS7yQGXs/giLdMk
+            oiE8epcO6A1+LyqTqkLUosHOOmx6YEDvTQImtl32jDKhWVfYDRbefSNaSWfMjc1Z
+            HQg1hBo/Yuym6+7L+GSvv3mzM1dSg563JypPaH05hLwS+Tj/9yZrlt1t0kXPq5I9
+            z4kIAU/KRaZ3L92/zCfWQfYyptAPakilocDtZGBaC/F67OAnnr7Qu57TPCyYKGzM
+            GaugNCEHpZEjpHYG+6bhuqzFsn6i7ye4G+JlKdx/2wN2U13A3r23I4zDGjKONHx8
+            x1z/U20Tu9STuCYlPgbAKTDdravje09M/MGM7TVftIZlRsEH+CMzBl3L85Rzr6nz
+            pNHa5f5HWGzFpZa/J+UI+AtDb+PGPql952JtDdGJ5fbCCvPrDdAv3bvjGsRnXtbK
+            T+oOJKhxO87kPSa4iwk6a45m8CEuIPFWzI4UVblI2DNvZuB5LyNHFv6VpAeNsK7c
+            27s7X9tHS807MC4/M/0KJRPH78Jf5j/eKDmjn4jSOw3xWpRSYRHE4LuTuy5CifA3
+            X6Oq9G6K243ayQAm0gzpnBsnnP2qxit/Iu6+Mcm6nXJkL9Jd10ctVjeJbTEzSPzS
+            XgHX/rcUSXG33OL+RZdxdxnC1h6FcvkQyJagWAwDDxbVvwO67FMAycBIrAfI4xqh
+            HqSJJxT5oNpoOXTyl3mtQCbfz8QHxjsXhuk51mVq1BoefKe56OXLayE1U2X0yZs=
+            =FPXt
             -----END PGP MESSAGE-----
           fp: 460A6C9C6EE7FC53644563E5989F2E56CA5E3488
     encrypted_regex: ^(data|stringData)$
