--- a/apps/staging/helloworld/kustomization.yaml
+++ b/apps/staging/helloworld/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: demo
 resources:
   - ../../base/helloworld
   - secrets.yaml
+  - image-policy.yaml
 patchesStrategicMerge:
   - helm-values.yaml
