--- a/clusters/staging/flux-system/gotk-sync.yaml
+++ b/clusters/staging/flux-system/gotk-sync.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: smana/automatic-pull-staging
+    branch: main
   secretRef:
     name: flux-system
   url: ssh://git@github.com/Smana/flux-demo
