--- a/clusters/staging/images-updates/image-update-automation.yaml
+++ b/clusters/staging/images-updates/image-update-automation.yaml
@@ -11,7 +11,7 @@ spec:
   git:
     checkout:
       ref:
-        branch: smana/automatic-pull-staging
+        branch: main
     commit:
       author:
         email: fluxcdbot@users.noreply.github.com
@@ -36,7 +36,7 @@ spec:
         - {{.}}
         {{ end -}}
     push:
-      branch: smana/automatic-pull-staging
+      branch: main
   update:
-    path: ./clusters/staging
+    path: ./apps/staging
     strategy: Setters
