--- a/apps/staging/helloworld/helm-values.yaml
+++ b/apps/staging/helloworld/helm-values.yaml
@@ -7,8 +7,10 @@ spec:
   chart:
     spec:
       version: ">=0.1.0"
+      valuesFiles:
+        - values.yaml
+        - staging-values.yaml
   test:
     enable: false
   values:
-    replicaCount: 3
     image: "smana/helloworld:staging-cd2c525-1624897137" # {"$imagepolicy": "flux-system:helloworld"}
