Revert "Remove secrets for helloworld, is managed on the code repository"

--- a/apps/staging/helloworld/kustomization.yaml
+++ b/apps/staging/helloworld/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 namespace: demo
 resources:
   - ../../base/helloworld
+  - secrets.yaml
 patchesStrategicMerge:
   - helm-values.yaml
